tests/snapshots/test_redaction__foo_bar.snap
---
created: "2019-05-29T14:16:16.625625Z"
creator: insta@0.8.1
source: tests/test_redaction.rs
expression: "Selector::parse(\".foo.bar\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
        ],
    ],
}
