tests/snapshots/test_redaction__foo_bar_full_range.snap
---
created: "2019-05-29T15:01:31.190888Z"
creator: insta@0.8.1
source: tests/test_redaction.rs
expression: "Selector::parse(\".foo.bar[]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
            Range(
                None,
                None,
            ),
        ],
    ],
}
