tests/snapshots/test_redaction__foo_bar_range_to.snap
---
source: tests/test_redaction.rs
assertion_line: 25
expression: "Selector::parse(\".foo.bar[:10]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
            Range(
                None,
                Some(
                    10,
                ),
            ),
        ],
    ],
}
