tests/snapshots/test_redaction__map_key_redaction.snap
---
source: tests/test_redaction.rs
assertion_line: 340
expression: foo
---
hm:
  ? bucket: "[bucket]"
    value: 0
  : 42
btm:
  "[key]": 23

