tests/snapshots/test_redaction__name.snap
---
source: tests/test_redaction.rs
expression: "&user"
---
id: "[id]"
username: john_doe
email: john@example.com
extra: ""
