tests/snapshots/test_redaction__struct_array_redaction.snap
---
source: tests/test_redaction.rs
assertion_line: 307
expression: "vec![checkout]"
---
- _id: "[checkout_id]"
  products:
    - _id: "[product_id]"
      product_name: "[product_name]"
    - _id: "[product_id]"
      product_name: "[product_name]"

