tests/snapshots/test_redaction__user.snap
---
created: "2019-01-21T21:31:54.349387+00:00"
creator: insta@0.3.0
expression: "&User{id: Uuid::new_v4(), username: \"john_doe\".to_string(),}"
source: tests/test_redaction.rs
---
id: "[uuid]"
username: john_doe