tests/snapshots/test_redaction__user_csv.snap
---
source: tests/test_redaction.rs
expression: "&User{id: 44,\n      username: \"julius_csv\".to_string(),\n      email: Email(\"julius@example.com\".to_string()),\n      extra: \"\".to_string(),}"
---
id,username,email,extra
[id],julius_csv,julius@example.com,

