tests/snapshots/test_redaction__user_json_flags.snap
---
source: tests/test_redaction.rs
assertion_line: 359
expression: "&User{id: 122,\n      username: \"jason_doe\".to_string(),\n      flags:\n          vec![\"zzz\".into(), \"foo\".into(), \"aha\".into(),\n               \"is_admin\".into()].into_iter().collect(),}"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "flags": [
    "aha",
    "foo",
    "is_admin",
    "zzz"
  ]
}
